# Indie_Studio

./: CMakeLists.txt  Makefile  fetch_raylib.cmake  sound.txt
Include/: Game_Master.hpp
Include/Encapsulation/: raylib.hpp
Include/Menu/: End.hpp  IMenu.hpp  Menu_Interface.hpp  Menu_Pause.hpp  Menu_Personalisation.hpp  Menu_Setting.hpp  Splash_Screen.hpp
Include/Object/: Object.hpp  allInclude.hpp
Include/Object/Displayable/: Displayable.hpp
Include/Object/Displayable/Movable/: Movable.hpp
Include/Object/Displayable/Movable/Model3D/: Bonus.hpp  Map.hpp  Model3D.hpp  Player.hpp
Include/Object/Displayable/Static/: Static.hpp
Include/Object/Displayable/Static/UI/: Button.hpp  Slider.hpp
Include/Object/NotDisplayable/: Camera.hpp  NotDisplayable.hpp
Ressources/: little_platform.gltf  particle.gltf  platform_cloud.gltf
Ressources/Animation/: courir1.iqm  jump1.iqm  la_claque1.iqm
Ressources/Bonus/: plus_attack.gltf
Ressources/Characters/: personnage.iqm
src/: main.cpp
src/GameMaster/: Game_Master.cpp  gm_drawInGame.cpp  gm_inGame.cpp
src/Menu/: End.cpp  Menu_Interface.cpp  Menu_Pause.cpp  Menu_Personalisation.cpp  Menu_Setting.cpp  Splash_Screen.cpp
src/Object/: Object.cpp
src/Object/Displayable/: Displayable.cpp
src/Object/Displayable/Movable/: Movable.cpp
src/Object/Displayable/Movable/Model3D/: Bonus.cpp  Map.cpp  Model3D.cpp
src/Object/Displayable/Movable/Model3D/Player/: Player.cpp  playerAttack.cpp  playerMouv.cpp
src/Object/Displayable/Static/: Static.cpp
src/Object/Displayable/Static/UI/: Button.cpp  Slider.cpp
src/Object/NotDisplayable/: Camera.cpp  NotDisplayable.cpp
